# delas_bootcamp

./: README.md
delas/: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
delas/conf/base/: catalog.yml
delas/delas/: pyproject.toml  requirements.txt
delas/delas/tests/: test_run.py
delas/src/delas/: __init__.py  __main__.py  settings.py
delas/src/delas/pipelines/data_processing/: nodes.py  pipeline.py
delas/tests/pipelines/data_science/: test_pipeline.py
